# We set up our own workspace that contains the library crates.
# `./run-test.sh` makes the `library` folder a symlink to the right place.
# (Somehow, directly building things from `rustlib/src` does not work...)
[workspace]
members = [
  "library/std",
  "library/sysroot",
]

exclude = [
  # stdarch has its own Cargo workspace
  "library/stdarch",
  # this is just a staging ground for CI
  "rust-src-patched",
]

[patch.crates-io]
# See comments in `library/rustc-std-workspace-core/README.md` for what's going on
# here
rustc-std-workspace-core = { path = 'library/rustc-std-workspace-core' }
rustc-std-workspace-alloc = { path = 'library/rustc-std-workspace-alloc' }
rustc-std-workspace-std = { path = 'library/rustc-std-workspace-std' }
