[package]
name = "alloc_miri_test"
version = "0.0.0"
autotests = false
autobenches = false
edition = "2021"

[lib]
name = "alloc_miri_test"
path = "../library/alloc/src/lib.rs"

[features]
# Empty this crate to avoid two copies of liballoc.
# See https://github.com/rust-lang/miri-test-libstd/issues/4.
default = ["miri-test-libstd"]
miri-test-libstd = []

[dev-dependencies]
rand = "0.8"
rand_xorshift = "0.3"
# This lets tests access the `core` and `alloc` crates.
core = { path = "../fake/core" }
alloc = { path = "../fake/alloc" }

[[test]]
name = "collectionstests"
path = "../library/alloc/tests/lib.rs"
