[package]
name = "alloc_miri_test"
version = "0.0.0"
autotests = false
autobenches = false
edition = "2021"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_xorshift = "0.3.0"

[[test]]
name = "alloc"
path = "../library/alloc/src/lib.rs"

[[test]]
name = "alloctests"
path = "../library/alloc/tests/lib.rs"
