[package]
name = "alloc"
version = "0.0.0"
autotests = false
autobenches = false
edition = "2021"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_xorshift = "0.3.0"

[[test]]
name = "alloc-lib"
path = "../library/alloc/src/lib.rs"

[[test]]
name = "alloc-tests"
path = "../library/alloc/tests/lib.rs"
