[package]
name = "alloc_sanity_test"
version = "0.0.0"
autotests = false
autobenches = false
edition = "2021"

[lib]
name = "alloc_sanity_test"
path = "../library/alloc/src/lib.rs"

[features]
# Empty this crate to avoid two copies of liballoc.
# See https://github.com/rust-lang/miri-test-libstd/issues/4.
default = ["miri-test-libstd"]
miri-test-libstd = []

[dependencies]
# This lets the crate access the `core` and `alloc` crates.
core = { path = "../fake/core" }
alloc = { path = "../fake/alloc" }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
rand_xorshift = "0.3.0"

[[test]]
name = "collectionstests"
path = "../library/alloc/tests/lib.rs"
