[package]
authors = ["The Rust Project Developers"]
name = "core_miri_test"
version = "0.0.0"
autotests = false
autobenches = false
edition = "2021"

[lib]
name = "core_miri_test"
path = "../libcore/src/lib.rs"
test = false
bench = false

[features]
# Empty this crate to avoid two copies of libcore.
# See https://github.com/rust-lang/miri-test-libstd/issues/4.
default = ["miri-test-libstd"]
miri-test-libstd = []

[[test]]
name = "coretests"
path = "../libcore/tests/lib.rs"

[dev-dependencies]
rand = "0.7"
