[package]
authors = ["The Rust Project Developers"]
name = "core_miri_test"
version = "0.0.0"
autotests = false
autobenches = false
edition = "2021"

[lib]
name = "core_miri_test"
path = "../empty.rs"
test = false
bench = false

[[test]]
name = "coretests"
path = "../library/core/tests/lib.rs"

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
rand_xorshift = { version = "0.3.0", default-features = false }
