[package]
authors = ["The Rust Project Developers"]
name = "core_sanity_test"
version = "0.0.0"
autotests = false
autobenches = false
edition = "2021"

[lib]
name = "core_sanity_test"
path = "../library/core/src/lib.rs"
test = false
bench = false

[features]
# Empty this crate to avoid two copies of libcore.
# See https://github.com/rust-lang/miri-test-libstd/issues/4.
default = ["miri-test-libstd"]
miri-test-libstd = []

[[test]]
name = "coretests"
path = "../library/core/tests/lib.rs"

[dependencies]
# This lets the crate access the `core` crate.
core = { path = "../fake/core" }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
rand_xorshift = { version = "0.3.0", default-features = false }
